--- a/skysub.tex
+++ b/skysub.tex
@@ -484,7 +484,7 @@ Ultimately, the only remedy for this problem is to optimize against the shape---
 
 \section{Scalar Sky Optimization}
 
-Despite the best intentions of sky-target nodding (\S obs) and median sky image construction (\S reduction), classical NIR sky subtraction on a target as large as M31 is limited by an uncertainty of 1\% of the sky intensity. Classically, the true value of the sky on the disk of M31 would seem lost by the time and spatial variations of skyglow between disk and sky field observations. Here, we demonstrate that the residual sky bias in each observation can be inferred from information in the overlaps of pairs of images in the mosaic.
+Despite the best intentions of sky-target nodding (\S obs) and median sky image construction (\S reduction), classical NIR sky subtraction on a target as large as M31 is limited by an uncertainty of 1\% of the sky intensity. Classically, the true value of the sky on the disk of M31 is lost by the temporal and spatial variations of skyglow between disk and sky field observations. Here, we demonstrate that the residual sky bias in each observation can be inferred from information in the overlaps of pairs of images in the mosaic.
 
 Each classically sky subtracted image of the M31 disk is a combination of the true surface intensity, $I_i$, and a residual sky intensity, $\epsilon_i$. Consider a pair of images, $i$ and $j$, that overlap on the galaxy: their difference is $(I_i+\epsilon_i) - (I_j+\epsilon_j) = \epsilon_i - \epsilon_j$. Given this measurement $\epsilon_i - \epsilon_j$ of residual sky intensity, we introduce \emph{sky offsets}, $\Delta$, for each observation so that
 
