Added vc package

--- a/skysub.tex
+++ b/skysub.tex
@@ -26,6 +26,9 @@
 \newcommand{\awkward}[1]{\textcolor{red}{#1}}
 \newcommand{\todo}[1]{\textcolor{green}{#1}}
 
+% To track draft versions in git
+%\immediate\write18{sh ./vc}
+\input{vc}
 
 % aastex setup
 \shorttitle{Near-IR Imaging of M31}
