Added git revision to slug

--- a/skysub.tex
+++ b/skysub.tex
@@ -35,6 +35,7 @@
 \shortauthors{Sick et al.}
 
 \begin{document}
+\slugcomment{Version \VCRevision\ by \VCAuthor\ on \VCDateTEX , \VCTime .}
 \title{Near-Infrared Imaging of M31}
 \author{Jonathan Sick and Stéphane Courteau}
 \affil{Queen's University}
